<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">


  <TextView
      android:id="@+id/mainMenuDisplay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/app_name"
      android:textSize="35sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.036" />


  <Button
      android:id="@+id/SearchSearchButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:text="@string/SearchSearchButton"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/EnterPartTextf" />

  <Button
      android:id="@+id/BuySearchButton"
      android:layout_width="76dp"
      android:layout_height="60dp"
      android:layout_marginTop="360dp"
      android:text="@string/Buy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/SearchSearchButton" />

  <EditText
      android:id="@+id/EnterPartTextf"
      android:layout_width="289dp"
      android:layout_height="46dp"
      android:layout_marginTop="64dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="@string/EnterPart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/SearchMenuText" />

  <TextView
      android:id="@+id/SearchMenuText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:text="@string/SearchforParts"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/mainMenuDisplay" />


</androidx.constraintlayout.widget.ConstraintLayout>